--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: 李嘉鹏的主页
 page-top-title: 李嘉鹏&ensp;|&ensp;LI Jia-Peng
-top-section-bg-text: Boldly go where no one has gone before
+top-section-bg-text: 月球开发 功在当代 利在千秋
 home-subtitle: 李嘉鹏&ensp;|&ensp;LI Jia-Peng
 copyright-text: '&copy; LI Jia-Peng 2025. All Rights Reserved.'
